tests/baselines/reference/jsContainerMergeTsDeclaration2.errors.txt
b.js(2,1): error TS2322: Type 'number' is not assignable to type '() => void'.


==== a.d.ts (0 errors) ====
    declare namespace C {
        function bar(): void
    }
==== b.js (1 errors) ====
    C.prototype = {};
    C.bar = 2;
    ~~~~~
!!! error TS2322: Type 'number' is not assignable to type '() => void'.
    